Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <img src="./images/piggy_smalls.jpg">
 
         <img src="./images/rainbowdash.jpg">
-
-        <img src="./images/sobriety.jpg">
-        <img src="./images/trouble.jpg">
-        <img src="./images/truffleshuffle.jpg">
+    <div class="column">
+        <img src="./images/sobriety.jpg" class="small">
+        <img src="./images/trouble.jpg" class="small">
+        <img src="./images/truffleshuffle.jpg" class="small">
+    </div>
 
     </div>
 
