--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
         <img src="./images/porkchop.jpg">
         <img src="./images/piggy_smalls.jpg">
-
-        <img src="./images/rainbowdash.jpg">
+    <div class="column">
+        <img src="./images/rainbowdash.jpg" class="med">
+    </div>
     <div class="column">
         <img src="./images/sobriety.jpg" class="small">
         <img src="./images/trouble.jpg" class="small">
