--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 
     <h4 class="indifferent">Those hogs, towards whom I am indifferent</h4>
     <div class="container indifferent">
-
-        <img src="./images/porkchop.jpg">
-        <img src="./images/piggy_smalls.jpg">
-    <div class="column">
-        <img src="./images/rainbowdash.jpg" class="med">
-    </div>
+            <div class="column">
+              <img src="./images/porkchop.jpg" class="med">
+              <img src="./images/piggy_smalls.jpg" class="small">
+            </div>
+              <div class="column">
+              <img src="./images/rainbowdash.jpg" class="small">
+              
+              </div>
     <div class="column">
         <img src="./images/sobriety.jpg" class="small">
         <img src="./images/trouble.jpg" class="small">
