Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img src="./images/piggy_smalls.jpg" class="small">
     </div>
     <div class="column">
-      <img src="./images/rainbowdash.jpg" class="small">
+      <img src="./images/rainbowdash.jpg" class="med">
     </div>
 
     <div class="column">
