Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="./images/cherub.jpg">
 
         <img src="./images/galaxy_note.jpg">
-
+        <img src="./images/leggo_my_eggo.jpg">
 
         <img src="./images/mudblood.jpg">
 
@@ -32,7 +32,7 @@
 
     <div class="column">
       <img src="./images/porkchop.jpg" class="med">
-      <img src="./images/piggy_smalls.jpg" class="small">
+      
     </div>
     <div class="column">
       <img src="./images/rainbowdash.jpg" class="small">
