Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="column">
-
+        <img src="./images/sobriety.jpg" class="small">
         <img src="./images/trouble.jpg" class="small">
         <img src="./images/truffleshuffle.jpg" class="small">
     </div>
