--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <img src="./images/augustus_gloop.jpg" class="small">
         <img src="./images/cherub.jpg" class="small">
       </div>
-
-        <img src="./images/galaxy_note.jpg">
-        <img src="./images/leggo_my_eggo.jpg">
+      <div class="column">
+        <img src="./images/galaxy_note.jpg" class="med">
+        <img src="./images/leggo_my_eggo.jpg" class="small">
+      </div>
 
         <img src="./images/mudblood.jpg">
 
