--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="container indifferent">
 
     <div class="column">
-      <img src="./images/porkchop.jpg" class="med">
-      <img src="./images/piggy_smalls.jpg" class="small">
+      <img src="./images/porkchop.jpg" class="small">
+      <img src="./images/piggy_smalls.jpg" class="med">
     </div>
     <div class="column">
       <img src="./images/rainbowdash.jpg" class="small">
